--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,28 @@
-.App {
-  text-align: center;
+html {
+  background-image: linear-gradient(150deg, #9E2D91, #664ACA);
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1, h3, li {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dash_icon {
+  height: 80px;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.iconTitle {
+  color: white;
+  font-weight: bold;
+  text-align: center;
+}
+
+.dashboardStyle {
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
+
 }
