--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ h1, h3, li {
   margin: 10px;
 }
 
+/*  Hex yellow #FCEE21 */
+
 .iconTitle {
   color: white;
   font-weight: bold;
@@ -24,5 +26,44 @@ h1, h3, li {
   display: flex;
   flex-direction: column;
   flex-flow: wrap;
+}
 
+.graphContainer{
+  padding: 10px;
+}
+
+.graphStyle {
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px #fff;
+}
+
+.navBarStyle {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding-bottom: 6px;
+}
+
+.navbarIconStyle {
+height:50px;
+border-radius: 10px;
+margin: 8px;
+box-shadow: 0px 0px 20px #fff;
+}
+
+.newSetSubmit {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.newSetSubmitButton {
+  background-color: yellow;
+  font-size: 20px;
+  color: blue;
+  margin: 10px;
+  border-radius: 6px;
+  width: auto;
 }
