--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,17 @@ h1, h3, li {
   color: white;
 }
 
+table {
+  border: solid white 2px;
+  text-align: center;
+  width: 80%;
+  color: white;
+}
+
+td, th {
+  border: solid white 1px;
+}
+
 .dash_icon {
   height: 80px;
   margin: 10px;
@@ -26,6 +37,10 @@ h1, h3, li {
   display: flex;
   flex-direction: column;
   flex-flow: wrap;
+}
+
+.directToDashButton {
+  width: 20px;
 }
 
 .graphContainer{
@@ -53,10 +68,27 @@ margin: 8px;
 box-shadow: 0px 0px 20px #fff;
 }
 
+.newSetField {
+  height: 30px;
+  width: 70%;
+  margin: 4px;
+  border-radius: 6px;
+  text-align: center;
+  font-size: 90%;
+}
+
+.newSetContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
 .newSetSubmit {
   display: flex;
   align-content: center;
   justify-content: center;
+
 }
 
 .newSetSubmitButton {
@@ -66,4 +98,12 @@ box-shadow: 0px 0px 20px #fff;
   margin: 10px;
   border-radius: 6px;
   width: auto;
+}
+
+.maxRepsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
 }
