--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@ td, th {
   border: solid white 1px;
 }
 
+.comment {
+  color: yellow;
+  border: 1px dashed red;
+  background-color: grey;
+}
+
 .dash_icon {
   height: 80px;
   margin: 10px;
@@ -43,8 +49,30 @@ td, th {
   width: 20px;
 }
 
+.forgetPasswordButton {
+  border-radius: 6px;
+  height: 30px;
+  width: 60%;
+  margin: 8px;
+  color: red;
+  font-weight: bold;
+}
+
 .graphContainer{
   padding: 10px;
+}
+
+.graphDashIcon {
+  height: 80px;
+  width: auto;
+  border-radius: 6px;
+  margin: 10px;
+}
+
+.graphDashStyle{
+  display: flex;
+  flex-direction: column;
+  flex-flow: wrap;
 }
 
 .graphStyle {
@@ -54,18 +82,63 @@ td, th {
   box-shadow: 0px 0px 20px #fff;
 }
 
+.loginButton {
+  border-color: grey;
+  border-radius: 6px;
+  height: 30px;
+  width: 60%;
+  margin: 8px;
+  font-weight: bold;
+  color: white;
+  background-image:
+    linear-gradient(-30deg, #000, #664ACA);
+  box-shadow: 0px 0px 20px #fff;
+}
+
+.loginContainer {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.loginField {
+  border-radius: 4px;
+  text-align: center;
+  margin: 8px;
+  height: 30px;
+  width: 80%;
+}
+
 .navBarStyle {
   display: flex;
-  align-content: center;
-  justify-content: center;
   padding-bottom: 6px;
 }
 
 .navbarIconStyle {
-height:50px;
-border-radius: 10px;
-margin: 8px;
-box-shadow: 0px 0px 20px #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50px;
+  height:50px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px #fff;
+}
+.navBarContainerStyle {
+  padding: 10px;
+
+}
+.navBarMenuContainerStyle {
+
+}
+
+.navBarMenuStyle {
+  height:50px;
+  border-radius: 10px;
+  margin: 8px;
 }
 
 .newSetField {
@@ -106,4 +179,34 @@ box-shadow: 0px 0px 20px #fff;
   justify-content: center;
   align-items: center;
   width: 90%;
+}
+
+.registerContainer {
+  padding-top: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.registerField {
+  height: 30px;
+  width: 70%;
+  margin: 6px;
+  border-radius: 6px;
+  text-align: center;
+  font-size: 90%;
+}
+
+.signUpButton {
+  border-radius: 6px;
+  height: auto;
+  width: 60%;
+  margin: 8px;
+  margin-top: 40px;
+  color: purple;
+  font-weight: bold;
+  font-size: 20px;
+
 }
