--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html {
 
 h1, h3, li {
   color: white;
+  text-align: center;
 }
 
 table {
@@ -36,7 +37,7 @@ td, th {
   width: 70%;
   font-size: 20px;
   color: purple;
-  
+
 }
 
 /*  Hex yellow #FCEE21 */
@@ -87,8 +88,7 @@ td, th {
 .forgetPasswordButton {
   border-radius: 6px;
   height: 30px;
-  width: 60%;
-  margin: 8px;
+  width: 40%;
   color: red;
   font-weight: bold;
 }
@@ -133,18 +133,17 @@ td, th {
 .loginButton {
   border-color: grey;
   border-radius: 6px;
-  height: 30px;
+  font-size: 20px;
   width: 60%;
   margin: 8px;
   font-weight: bold;
-  color: white;
-  background-image:
-    linear-gradient(-30deg, #000, #664ACA);
-  box-shadow: 0px 0px 20px #fff;
+  color: purple;
+  box-shadow: 0px 0px 4px #fff;
+  margin: 20px;
 }
 
 .loginContainer {
-  padding-top: 100px;
+  padding-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -152,11 +151,28 @@ td, th {
 }
 
 .loginField {
-  border-radius: 4px;
+  border-radius: 6px;
   text-align: center;
   margin: 8px;
-  height: 30px;
+  font-size: 20px;
+  padding:6px;
   width: 80%;
+}
+
+.loginLogo {
+  left: 0;
+  right: 0;
+  width: 100px;
+  height:100px;
+  border-radius: 100px;
+  box-shadow: 0px 0px 20px #fff;
+}
+
+.loginLogoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .navBarStyle {
@@ -230,7 +246,6 @@ td, th {
 }
 
 .registerContainer {
-  padding-top: 100px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -255,7 +270,9 @@ td, th {
   margin-top: 40px;
   color: purple;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
+  background-color: #fcee21;
+  box-shadow: 0px 0px 4px #fff;
 }
 
 .socialDashContainer{
